--- a/Privacy.html
+++ b/Privacy.html
@@ -1,1 +1,110 @@
-<html><head><meta content="text/html; charset=UTF-8" http-equiv="content-type"><style type="text/css">@import url('https://themes.googleusercontent.com/fonts/css?kit=dpiI8CyVsrzWsJLBFKehGpLhv3qFjX7dUn1mYxfCXhI');ul.lst-kix_24urj2dp3mew-6{list-style-type:none}ul.lst-kix_24urj2dp3mew-7{list-style-type:none}ul.lst-kix_24urj2dp3mew-8{list-style-type:none}ul.lst-kix_24urj2dp3mew-2{list-style-type:none}ul.lst-kix_24urj2dp3mew-3{list-style-type:none}ul.lst-kix_24urj2dp3mew-4{list-style-type:none}ul.lst-kix_24urj2dp3mew-5{list-style-type:none}.lst-kix_9cgvw5nwh3f3-7>li:before{content:"\0025cb  "}.lst-kix_24urj2dp3mew-1>li:before{content:"\0025cb  "}.lst-kix_24urj2dp3mew-0>li:before{content:"\0025cf  "}.lst-kix_9cgvw5nwh3f3-8>li:before{content:"\0025a0  "}ul.lst-kix_9cgvw5nwh3f3-5{list-style-type:none}ul.lst-kix_9cgvw5nwh3f3-6{list-style-type:none}ul.lst-kix_9cgvw5nwh3f3-7{list-style-type:none}.lst-kix_24urj2dp3mew-8>li:before{content:"\0025a0  "}ul.lst-kix_9cgvw5nwh3f3-8{list-style-type:none}ul.lst-kix_9cgvw5nwh3f3-1{list-style-type:none}.lst-kix_9cgvw5nwh3f3-0>li:before{content:"\0025cf  "}ul.lst-kix_9cgvw5nwh3f3-2{list-style-type:none}ul.lst-kix_9cgvw5nwh3f3-3{list-style-type:none}.lst-kix_24urj2dp3mew-7>li:before{content:"\0025cb  "}ul.lst-kix_9cgvw5nwh3f3-4{list-style-type:none}ul.lst-kix_9cgvw5nwh3f3-0{list-style-type:none}.lst-kix_9cgvw5nwh3f3-5>li:before{content:"\0025a0  "}.lst-kix_9cgvw5nwh3f3-6>li:before{content:"\0025cf  "}.lst-kix_24urj2dp3mew-2>li:before{content:"\0025a0  "}.lst-kix_9cgvw5nwh3f3-4>li:before{content:"\0025cb  "}.lst-kix_24urj2dp3mew-3>li:before{content:"\0025cf  "}.lst-kix_9cgvw5nwh3f3-1>li:before{content:"\0025cb  "}.lst-kix_9cgvw5nwh3f3-2>li:before{content:"\0025a0  "}ul.lst-kix_24urj2dp3mew-0{list-style-type:none}ul.lst-kix_24urj2dp3mew-1{list-style-type:none}.lst-kix_24urj2dp3mew-4>li:before{content:"\0025cb  "}.lst-kix_24urj2dp3mew-6>li:before{content:"\0025cf  "}.lst-kix_9cgvw5nwh3f3-3>li:before{content:"\0025cf  "}.lst-kix_24urj2dp3mew-5>li:before{content:"\0025a0  "}ol{margin:0;padding:0}table td,table th{padding:0}.c2{border-right-style:solid;padding-top:0pt;border-top-width:0pt;border-right-width:0pt;padding-left:0pt;padding-bottom:0pt;line-height:1.15;border-left-width:0pt;border-top-style:solid;background-color:#ffffff;border-left-style:solid;border-bottom-width:0pt;border-bottom-style:solid;orphans:2;widows:2;text-align:left;padding-right:0pt}.c8{border-right-style:solid;border-top-width:0pt;border-right-width:0pt;padding-left:0pt;border-top-style:solid;margin-right:8pt;margin-left:66pt;border-bottom-width:0pt;border-bottom-style:solid;padding-right:0pt}.c3{color:#363636;font-weight:700;text-decoration:none;vertical-align:baseline;font-size:12pt;font-family:"Roboto";font-style:normal}.c4{color:#4a4a4a;font-weight:400;text-decoration:none;vertical-align:baseline;font-size:12pt;font-family:"Roboto";font-style:normal}.c5{padding-top:0pt;padding-bottom:0pt;line-height:1.15;orphans:2;widows:2;text-align:left}.c10{color:#000000;font-weight:400;font-size:11pt;font-family:"Arial"}.c11{font-size:12pt;font-family:"Roboto";color:#4a4a4a;font-weight:400}.c0{font-size:12pt;font-family:"Roboto";color:#3273dc;font-weight:400}.c7{text-decoration:none;vertical-align:baseline;font-style:normal}.c1{padding:0;margin:0}.c9{color:inherit;text-decoration:inherit}.c12{max-width:451.4pt;padding:72pt 72pt 72pt 72pt}.c6{background-color:#ffffff}.title{padding-top:0pt;color:#000000;font-size:26pt;padding-bottom:3pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}.subtitle{padding-top:0pt;color:#666666;font-size:15pt;padding-bottom:16pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}li{color:#000000;font-size:11pt;font-family:"Arial"}p{margin:0;color:#000000;font-size:11pt;font-family:"Arial"}h1{padding-top:20pt;color:#000000;font-size:20pt;padding-bottom:6pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h2{padding-top:18pt;color:#000000;font-size:16pt;padding-bottom:6pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h3{padding-top:16pt;color:#434343;font-size:14pt;padding-bottom:4pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h4{padding-top:14pt;color:#666666;font-size:12pt;padding-bottom:4pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h5{padding-top:12pt;color:#666666;font-size:11pt;padding-bottom:4pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h6{padding-top:12pt;color:#666666;font-size:11pt;padding-bottom:4pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;font-style:italic;orphans:2;widows:2;text-align:left}</style></head><body><div class="c6 c12"><p class="c5"><span class="c3 c6">Privacy Policy</span></p><p class="c2"><span class="c4">dfdfdf built the fgfdfgfg app as a Free app. This SERVICE is provided by dfdfdf at no cost and is intended for use as is.</span></p><p class="c2"><span class="c4">This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.</span></p><p class="c2"><span class="c4">If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.</span></p><p class="c2"><span class="c4">The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at fgfdfgfg unless otherwise defined in this Privacy Policy.</span></p><p class="c2"><span class="c3">Information Collection and Use</span></p><p class="c2"><span class="c4">For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to dfdf fddfd. The information that I request will be retained on your device and is not collected by me in any way.</span></p><p class="c2"><span class="c4">The app does use third party services that may collect information used to identify you.</span></p><p class="c2"><span class="c4">Link to privacy policy of third party service providers used by the app</span></p><ul class="c1 lst-kix_9cgvw5nwh3f3-0 start"><li class="c8 c5"><span class="c0"><a class="c9" href="https://www.google.com/url?q=https://www.google.com/policies/privacy/&amp;sa=D&amp;ust=1605795577421000&amp;usg=AOvVaw3lj96r9wkUSRBB1MXDRK0m">Google Play Services</a></span></li><li class="c8 c5"><span class="c0"><a class="c9" href="https://www.google.com/url?q=https://unity3d.com/legal/privacy-policy&amp;sa=D&amp;ust=1605795577422000&amp;usg=AOvVaw33Uphz8ghQoc5xJNHyeY2g">Unity</a></span></li></ul><p class="c2"><span class="c3">Log Data</span></p><p class="c2"><span class="c4">I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (&ldquo;IP&rdquo;) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.</span></p><p class="c2"><span class="c3">Cookies</span></p><p class="c2"><span class="c4">Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device&#39;s internal memory.</span></p><p class="c2"><span class="c4">This Service does not use these &ldquo;cookies&rdquo; explicitly. However, the app may use third party code and libraries that use &ldquo;cookies&rdquo; to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.</span></p><p class="c2"><span class="c3">Service Providers</span></p><p class="c2"><span class="c4">I may employ third-party companies and individuals due to the following reasons:</span></p><ul class="c1 lst-kix_24urj2dp3mew-0 start"><li class="c5 c6 c8"><span class="c4">To facilitate our Service;</span></li><li class="c8 c5 c6"><span class="c4">To provide the Service on our behalf;</span></li><li class="c8 c5 c6"><span class="c4">To perform Service-related services; or</span></li><li class="c8 c5 c6"><span class="c4">To assist us in analyzing how our Service is used.</span></li></ul><p class="c2"><span class="c4">I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</span></p><p class="c2"><span class="c3">Security</span></p><p class="c2"><span class="c4">I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.</span></p><p class="c2"><span class="c3">Links to Other Sites</span></p><p class="c2"><span class="c4">This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</span></p><p class="c2"><span class="c3">Children&rsquo;s Privacy</span></p><p class="c2"><span class="c4">These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.</span></p><p class="c2"><span class="c3">Changes to This Privacy Policy</span></p><p class="c2"><span class="c4">I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page.</span></p><p class="c2"><span class="c4">This policy is effective as of 2020-11-19</span></p><p class="c2"><span class="c3">Contact Us</span></p><p class="c2"><span class="c11">If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at fgfgfg.</span></p></div></body></html>
+<!DOCTYPE html>
+    <html>
+    <head>
+      <meta charset='utf-8'>
+      <meta name='viewport' content='width=device-width'>
+      <title>Privacy Policy</title>
+      <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
+    </head>
+    <body>
+    <strong>Privacy Policy</strong> <p>
+                  dfdfdf built the fgfdfgfg app as
+                  a Free app. This SERVICE is provided by
+                  dfdfdf at no cost and is intended for use as
+                  is.
+                </p> <p>
+                  This page is used to inform visitors regarding my
+                  policies with the collection, use, and disclosure of Personal
+                  Information if anyone decided to use my Service.
+                </p> <p>
+                  If you choose to use my Service, then you agree to
+                  the collection and use of information in relation to this
+                  policy. The Personal Information that I collect is
+                  used for providing and improving the Service. I will not use or share your information with
+                  anyone except as described in this Privacy Policy.
+                </p> <p>
+                  The terms used in this Privacy Policy have the same meanings
+                  as in our Terms and Conditions, which is accessible at
+                  fgfdfgfg unless otherwise defined in this Privacy Policy.
+                </p> <p><strong>Information Collection and Use</strong></p> <p>
+                  For a better experience, while using our Service, I
+                  may require you to provide us with certain personally
+                  identifiable information, including but not limited to dfdf fddfd. The information that
+                  I request will be retained on your device and is not collected by me in any way.
+                </p> <div><p>
+                    The app does use third party services that may collect
+                    information used to identify you.
+                  </p> <p>
+                    Link to privacy policy of third party service providers used
+                    by the app
+                  </p> <ul><li><a href="https://www.google.com/policies/privacy/" target="_blank" rel="noopener noreferrer">Google Play Services</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><li><a href="https://unity3d.com/legal/privacy-policy" target="_blank" rel="noopener noreferrer">Unity</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> <p><strong>Log Data</strong></p> <p>
+                  I want to inform you that whenever you
+                  use my Service, in a case of an error in the app
+                  I collect data and information (through third party
+                  products) on your phone called Log Data. This Log Data may
+                  include information such as your device Internet Protocol
+                  (“IP”) address, device name, operating system version, the
+                  configuration of the app when utilizing my Service,
+                  the time and date of your use of the Service, and other
+                  statistics.
+                </p> <p><strong>Cookies</strong></p> <p>
+                  Cookies are files with a small amount of data that are
+                  commonly used as anonymous unique identifiers. These are sent
+                  to your browser from the websites that you visit and are
+                  stored on your device's internal memory.
+                </p> <p>
+                  This Service does not use these “cookies” explicitly. However,
+                  the app may use third party code and libraries that use
+                  “cookies” to collect information and improve their services.
+                  You have the option to either accept or refuse these cookies
+                  and know when a cookie is being sent to your device. If you
+                  choose to refuse our cookies, you may not be able to use some
+                  portions of this Service.
+                </p> <p><strong>Service Providers</strong></p> <p>
+                  I may employ third-party companies and
+                  individuals due to the following reasons:
+                </p> <ul><li>To facilitate our Service;</li> <li>To provide the Service on our behalf;</li> <li>To perform Service-related services; or</li> <li>To assist us in analyzing how our Service is used.</li></ul> <p>
+                  I want to inform users of this Service
+                  that these third parties have access to your Personal
+                  Information. The reason is to perform the tasks assigned to
+                  them on our behalf. However, they are obligated not to
+                  disclose or use the information for any other purpose.
+                </p> <p><strong>Security</strong></p> <p>
+                  I value your trust in providing us your
+                  Personal Information, thus we are striving to use commercially
+                  acceptable means of protecting it. But remember that no method
+                  of transmission over the internet, or method of electronic
+                  storage is 100% secure and reliable, and I cannot
+                  guarantee its absolute security.
+                </p> <p><strong>Links to Other Sites</strong></p> <p>
+                  This Service may contain links to other sites. If you click on
+                  a third-party link, you will be directed to that site. Note
+                  that these external sites are not operated by me.
+                  Therefore, I strongly advise you to review the
+                  Privacy Policy of these websites. I have
+                  no control over and assume no responsibility for the content,
+                  privacy policies, or practices of any third-party sites or
+                  services.
+                </p> <p><strong>Children’s Privacy</strong></p> <p>
+                  These Services do not address anyone under the age of 13.
+                  I do not knowingly collect personally
+                  identifiable information from children under 13. In the case
+                  I discover that a child under 13 has provided
+                  me with personal information, I immediately
+                  delete this from our servers. If you are a parent or guardian
+                  and you are aware that your child has provided us with
+                  personal information, please contact me so that
+                  I will be able to do necessary actions.
+                </p> <p><strong>Changes to This Privacy Policy</strong></p> <p>
+                  I may update our Privacy Policy from
+                  time to time. Thus, you are advised to review this page
+                  periodically for any changes. I will
+                  notify you of any changes by posting the new Privacy Policy on
+                  this page.
+                </p> <p>This policy is effective as of 2020-11-19</p> <p><strong>Contact Us</strong></p> <p>
+                  If you have any questions or suggestions about my
+                  Privacy Policy, do not hesitate to contact me at fgfgfg.
+                
+      </body>
+    </html>
+      
